[package]
name = "pr4tag"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.28"
git2 = "0.16.1"
octocrab = "0.23.0"
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.0", features = ["rt", "macros", "rt-multi-thread"] }
chrono = "0.4.26"
